# lazy-ticker

./: .gitignore  Pipfile  README.md  backend.dockerfile  backend.py  chromedriver-noxfile.py  cli.py  core.py  docker-compose.yml  frontend.dockerfile  frontend.py  instrument_play.py  lazy-todos.md  luigi_client.cfg  luigi_daemon.cfg  main.py  main_pipeline.py  noxfile.py  pipeline.dockerfile  playpen.py  pyproject.toml  restore_state.py  ticker_service.py  tweet_play.py  twitter.py
lazy_ticker/: cli.py  configuration.py  core.py  database.py  models.py  paths.py  pipeline.py  read.py  schema.py  stream.py  tda_scraper.py  ticker.py  twitter_scraper.py
lazy_ticker/models/: __init__.py  instrument.py  twitter.py  watchlist.py
lazy_ticker/pipeline/: __init__.py
lazy_ticker/pipelines/: watchlist.py
lazy_ticker/schemas/: __init__.py  instrument.py  timeperiod.py  twitter.py
templates/: base.html  users.html  watchlist.html
tests/: test_lazy_ticker.py  test_tda_scraper.py  test_twitter_scraper.py
